# Fractal

./: .clang-format  .gitignore  CMakeLists.txt
assets/shaders/: shader.slang  slang.spv
include/gtfoprofiler/: CMakeLists.txt  gtfo_profiler.h
lib/fractal/: CMakeLists.txt  Fractal.h
lib/fractal/core/: CMakeLists.txt  FTL_Application.cpp  FTL_Application.h  FTL_System.h  FTL_Window.cpp  FTL_Window.h
lib/fractal/renderer/: CMakeLists.txt  FTL_Renderer.cpp  FTL_Renderer.h  FTL_Vertex.h  FTL_VulkanCore.cpp  FTL_VulkanCore.h
lib/fractal/utility/: CMakeLists.txt  FTL_Log.cpp  FTL_Log.h  FTL_Types.h  FTL_pch.h
src/: CMakeLists.txt  main.cpp
